--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   auto_size_text: ^2.1.0
+  auto_size_text_field: ^0.1.7
 
 dev_dependencies:
   flutter_test:
