--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  auto_size_text: ^2.1.0
-  auto_size_text_field: ^0.1.7
+  cupertino_icons: ^1.0.3
+  auto_size_text: ^3.0.0-nullsafety.0
+  auto_size_text_field: ^1.0.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
