--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.3
   auto_size_text: ^3.0.0-nullsafety.0
   auto_size_text_field: ^1.0.0-nullsafety.1
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
