--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+    - family: 'Noto Sans JP'
+      fonts:
+       - asset: assets/fonts/NotoSansJP-Regular.otf
+    - family: 'Qahiri'
+      fonts:
+       - asset: assets/fonts/Qahiri-Regular.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
