Fixed some config issues with android

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
+
     package="com.workoutpal.frontend">
-   <application
-        android:label="frontend"
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
+    <application
+        android:label="WorkoutPal"
         android:icon="@mipmap/ic_launcher">
+
+
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
